fix: word-break on Fieldset

--- a/components/Fieldset/Fieldset.module.css
+++ b/components/Fieldset/Fieldset.module.css
@@ -3,6 +3,7 @@
   background: var(--background-fieldset);
   width: 100%;
   padding: var(--padding-container);
+  word-break: break-all;
 }
 
 .legend {
